<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sanfran"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/inputEmailLogin"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dip"
        android:ems="10"
        android:hint="@string/emailEditTextHint"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkerGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31" />

    <EditText
        android:id="@+id/inputPasswordLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edittext"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/clauEditTextHint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/darkerGray"
        app:layout_constraintEnd_toEndOf="@+id/inputEmailLogin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputEmailLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailLogin" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:shadowColor="@color/black"
        android:text="@string/titleLoginUI"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        android:transitionName="logoTextTransition"
        app:layout_constraintBottom_toTopOf="@+id/inputEmailLogin"
        app:layout_constraintEnd_toEndOf="@+id/inputEmailLogin"
        app:layout_constraintStart_toStartOf="@+id/inputEmailLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_bg"
        android:text="@string/textEntrarButtonLoginUI"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/inputPasswordLogin"
        app:layout_constraintStart_toStartOf="@+id/inputPasswordLogin"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordLogin" />


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="0.138">

        <TextView
            android:id="@+id/textAlta"
            android:layout_width="wrap_content"
            android:layout_height="58dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="3dp"
            android:text="@string/textInfoSignUpLoginUI"
            android:textColor="@color/white"
            android:textSize="21sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>